# DSPractice

./: .gitignore  CsvEtl.py  DQC.ipynb  Dockerfile  DqcCsvEtl.py  ETL.py  LICENSE  README.md  data.dvc  main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: publish-to-pypi.yaml
data/transformed/: item_categories.csv  items.csv  sales_train.csv  sample_submission.csv
notebooks/: DQC.ipynb  Data_validation.ipynb  Modeling.ipynb
src/: main.py
src/ETL/: CsvEtl.py  DqcCsvEtl.py
src/feature_extraction/: feature_extraction.py
src/future_sales_prediction_denis_shafarenko/: __init__.py  config.json  predict.py  train.py
src/future_sales_prediction_denis_shafarenko/ETL/: CsvEtl.py  DqcCsvEtl.py  ETL.py
src/future_sales_prediction_denis_shafarenko/analysis/: error_analysis.py  features_explainability.py  features_importance.py
src/future_sales_prediction_denis_shafarenko/feature_extraction/: feature_extraction.py
src/future_sales_prediction_denis_shafarenko/model/: CatBoostPredictor.py
src/future_sales_prediction_denis_shafarenko/splitter/: splitter.py  time_series_splitter.py
src/future_sales_prediction_denis_shafarenko/utils/: type_conversion.py
src/future_sales_prediction_denis_shafarenko/validation/: exceptions.py  feature_type.py  validation.py
src/validation/: schema_writer.py  type_conversion.py  validation.py
src/validation/splitter/: splitter.py  time_series_splitter.py
