[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "future_sales_prediction_denis_shafarenko"
version = "0.1.3"
authors = [
  { name="Denis Shafarenko", email="dzianis.shafarenka@innowise.com" },
]
description = "Catboost model for kaggle competition \"Future sales prediction\""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
     "absl-py==1.4.0",
      "aiohttp==3.9.5",
      "aiohttp-retry==2.8.3",
      "aiosignal==1.3.1",
      "amqp==5.2.0",
      "annotated-types==0.6.0",
      "antlr4-python3-runtime==4.9.3",
      "apache-beam==2.55.1",
      "appdirs==1.4.4",
      "astunparse==1.6.3",
      "async-timeout==4.0.3",
      "asyncssh==2.14.2",
      "atpublic==4.1.0",
      "attrs==23.2.0",
      "backports.tarfile==1.1.1",
      "billiard==4.2.0",
      "build==1.2.1",
      "cachetools==5.3.3",
      "catboost==1.2.5",
      "celery==5.4.0",
      "certifi==2024.2.2",
      "cffi==1.16.0",
      "charset-normalizer==3.3.2",
      "click==8.1.7",
      "click-didyoumean==0.3.1",
      "click-plugins==1.1.1",
      "click-repl==0.3.0",
      "cloudpickle==2.2.1",
      "colorama==0.4.6",
      "configobj==5.0.8",
      "contourpy==1.2.1",
      "crcmod==1.7",
      "cryptography==42.0.7",
      "cycler==0.12.1",
      "Deprecated==1.2.14",
      "dictdiffer==0.9.0",
      "dill==0.3.1.1",
      "diskcache==5.6.3",
      "distro==1.9.0",
      "dnspython==2.6.1",
      "docopt==0.6.2",
      "docstring_parser==0.16",
      "docutils==0.21.2",
      "dpath==2.1.6",
      "dulwich==0.22.1",
      "dvc==3.50.1",
      "dvc-data==3.15.1",
      "dvc-gdrive==3.0.1",
      "dvc-http==2.32.0",
      "dvc-objects==5.1.0",
      "dvc-render==1.0.2",
      "dvc-studio-client==0.20.0",
      "dvc-task==0.4.0",
      "entrypoints==0.4",
      "fastavro==1.9.4",
      "fasteners==0.19",
      "filelock==3.14.0",
      "flatbuffers==24.3.25",
      "flatten-dict==0.4.2",
      "flufl.lock==7.1.1",
      "fonttools==4.51.0",
      "frozenlist==1.4.1",
      "fsspec==2024.3.1",
      "funcy==2.0",
      "gast==0.5.4",
      "gitdb==4.0.11",
      "GitPython==3.1.43",
      "google-api-core==2.18.0",
      "google-api-python-client==1.12.11",
      "google-apitools==0.5.31",
      "google-auth==2.29.0",
      "google-auth-httplib2==0.1.1",
      "google-cloud-aiplatform==1.47.0",
      "google-cloud-bigquery==3.20.1",
      "google-cloud-bigquery-storage==2.24.0",
      "google-cloud-bigtable==2.23.1",
      "google-cloud-core==2.4.1",
      "google-cloud-datastore==2.19.0",
      "google-cloud-dlp==3.16.0",
      "google-cloud-language==2.13.3",
      "google-cloud-pubsub==2.21.1",
      "google-cloud-pubsublite==1.10.0",
      "google-cloud-recommendations-ai==0.10.10",
      "google-cloud-resource-manager==1.12.3",
      "google-cloud-spanner==3.44.0",
      "google-cloud-storage==2.16.0",
      "google-cloud-videointelligence==2.13.3",
      "google-cloud-vision==3.7.2",
      "google-crc32c==1.5.0",
      "google-pasta==0.2.0",
      "google-resumable-media==2.7.0",
      "googleapis-common-protos==1.63.0",
      "grandalf==0.8",
      "graphviz==0.20.3",
      "grpc-google-iam-v1==0.13.0",
      "grpc-interceptor==0.15.4",
      "grpcio==1.62.1",
      "grpcio-status==1.48.2",
      "gto==1.7.1",
      "h5py==3.11.0",
      "hdfs==2.7.3",
      "httplib2==0.22.0",
      "hydra-core==1.3.2",
      "idna==3.7",
      "importlib_metadata==7.1.0",
      "intel-openmp==2021.4.0",
      "iterative-telemetry==0.0.8",
      "jaraco.classes==3.4.0",
      "jaraco.context==5.3.0",
      "jaraco.functools==4.0.1",
      "Jinja2==3.1.3",
      "joblib==1.4.0",
      "Js2Py==0.74",
      "jsonpickle==3.0.4",
      "jsonschema==4.21.1",
      "jsonschema-specifications==2023.12.1",
      "keras==3.2.1",
      "keyring==25.2.1",
      "kiwisolver==1.4.5",
      "kombu==5.3.7",
      "libclang==18.1.1",
      "llvmlite==0.42.0",
      "Markdown==3.6",
      "markdown-it-py==3.0.0",
      "MarkupSafe==2.1.5",
      "matplotlib==3.9.0",
      "mdurl==0.1.2",
      "mkl==2021.4.0",
      "ml-dtypes==0.3.2",
      "more-itertools==10.2.0",
      "mpmath==1.3.0",
      "multidict==6.0.5",
      "namex==0.0.8",
      "networkx==3.3",
      "nh3==0.2.17",
      "numba==0.59.1",
      "numpy==1.26.4",
      "oauth2client==4.1.3",
      "objsize==0.7.0",
      "omegaconf==2.3.0",
      "opt-einsum==3.3.0",
      "optree==0.11.0",
      "orjson==3.10.1",
      "overrides==7.7.0",
      "packaging==24.0",
      "pandas==1.5.3",
      "pathspec==0.12.1",
      "pillow==10.3.0",
      "pkginfo==1.10.0",
      "platformdirs==3.11.0",
      "plotly==5.22.0",
      "prompt-toolkit==3.0.43",
      "proto-plus==1.23.0",
      "protobuf==3.20.3",
      "psutil==5.9.8",
      "pyarrow==10.0.1",
      "pyarrow-hotfix==0.6",
      "pyasn1==0.6.0",
      "pyasn1_modules==0.4.0",
      "pycparser==2.22",
      "pydantic==2.7.0",
      "pydantic_core==2.18.1",
      "pydot==1.4.2",
      "PyDrive2==1.19.0",
      "pyfarmhash==0.3.2",
      "pygit2==1.14.1",
      "Pygments==2.17.2",
      "pygtrie==2.5.0",
      "pyjsparser==2.7.1",
      "pymongo==4.6.3",
      "pyOpenSSL==24.1.0",
      "pyparsing==3.1.2",
      "pyproject_hooks==1.1.0",
      "python-dateutil==2.9.0.post0",
      "pytz==2024.1",
      "pywin32==306",
      "pywin32-ctypes==0.2.2",
      "PyYAML==6.0.1",
      "readme_renderer==43.0",
      "referencing==0.34.0",
      "regex==2024.4.16",
      "requests==2.31.0",
      "requests-toolbelt==1.0.0",
      "rfc3986==2.0.0",
      "rich==13.7.1",
      "rpds-py==0.18.0",
      "rsa==4.9",
      "ruamel.yaml==0.18.6",
      "ruamel.yaml.clib==0.2.8",
      "scikit-learn==1.5.0",
      "scipy==1.13.1",
      "scmrepo==3.3.2",
      "seaborn==0.13.2",
      "semver==3.0.2",
      "shap==0.45.1",
      "shapely==2.0.4",
      "shellingham==1.5.4",
      "shortuuid==1.0.13",
      "shtab==1.7.1",
      "six==1.16.0",
      "slicer==0.0.8",
      "smmap==5.0.1",
      "sqlparse==0.5.0",
      "sqltrie==0.11.0",
      "sympy==1.12",
      "tabulate==0.9.0",
      "tbb==2021.11.0",
      "tenacity==8.3.0",
      "tensorboard==2.16.2",
      "tensorboard-data-server==0.7.2",
      "tensorflow==2.16.1",
      "tensorflow-data-validation==1.14.0",
      "tensorflow-intel==2.16.1",
      "tensorflow-io-gcs-filesystem==0.31.0",
      "tensorflow-metadata==1.14.0",
      "tensorflow-serving-api==2.16.1",
      "termcolor==2.4.0",
      "tfx-bsl==1.14.0",
      "threadpoolctl==3.5.0",
      "tomli==2.0.1",
      "tomlkit==0.12.4",
      "torch==2.3.0+cu121",
      "tqdm==4.66.4",
      "twine==5.1.0",
      "typer==0.12.3",
      "typing_extensions==4.11.0",
      "tzdata==2024.1",
      "tzlocal==5.2",
      "uritemplate==3.0.1",
      "urllib3==2.2.1",
      "vine==5.1.0",
      "voluptuous==0.14.2",
      "wcwidth==0.2.13",
      "Werkzeug==3.0.2",
      "wrapt==1.16.0",
      "yarl==1.9.4",
      "zc.lockfile==3.0.post1",
      "zipp==3.18.2",
      "zstandard==0.22.0"
]

[project.urls]
Homepage = "https://github.com/denisshaf/DSPractice"
Issues = "https://github.com/denisshaf/DSPractice/issues"